--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,25 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.login_container{
+  width: fit-content;
+  height: auto;
+  background: #FFFFFF;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1), 0px 1px 5px 0px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+  border: 1px solid rgba(151, 151, 151, 0.2);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.registertag{
+  width: 24px;
+  height: 11px;
+  font-size: 6px;
+  font-family: PingFangSC-Regular, PingFang SC;
+  font-weight: 400;
+  color: #1890FF;
+  line-height: 11px;
+}
+
+.loginbutton{
+  width: 158px;
+  height: 20px;
+  background: #1890FF;
+  border-radius: 1px;
 }
